<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BottomBarActivity">

    <com.gauravk.bubblenavigation.BubbleNavigationConstraintView
        android:id="@+id/top_navigation_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="380dp"
        android:background="@color/white"
        android:elevation="4dp"
        android:padding="12dp"
        app:bnc_mode="spread"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/c_item_rest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_active="true"
            app:bt_colorActive="@color/orange_active"
            app:bt_colorInactive="@color/orange_inactive"
            app:bt_icon="@drawable/ic_restaurant"
            app:bt_padding="12dp"
            app:bt_shape="@drawable/transition_background_drawable_default"
            app:bt_title="@string/restaurant"
            app:bt_titlePadding="8dp" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/c_item_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_colorActive="@color/red_active"
            app:bt_colorInactive="@color/red_inactive"
            app:bt_icon="@drawable/ic_room"
            app:bt_padding="12dp"
            app:bt_shape="@drawable/transition_background_drawable_default"
            app:bt_title="@string/room"
            app:bt_titlePadding="8dp" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/c_item_happy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_colorActive="@color/green_active"
            app:bt_colorInactive="@color/green_inactive"
            app:bt_icon="@drawable/ic_happy"
            app:bt_padding="12dp"
            app:bt_shape="@drawable/transition_background_drawable_default"
            app:bt_title="@string/happy"
            app:bt_titlePadding="8dp" />
    </com.gauravk.bubblenavigation.BubbleNavigationConstraintView>

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_navigation_constraint" />

</android.support.constraint.ConstraintLayout>